# df-interviews

./: .gitignore  README.md
round_3a_system_design/: CANDIDATE_BRIEF.md
round_3b_live_coding/deepflow-interview-chatbot/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  start.sh
round_3b_live_coding/deepflow-interview-chatbot/backend/: alembic.ini  pyproject.toml
round_3b_live_coding/deepflow-interview-chatbot/backend/alembic/: env.py
round_3b_live_coding/deepflow-interview-chatbot/backend/alembic/versions/: c808e912b067_baseline.py
round_3b_live_coding/deepflow-interview-chatbot/backend/db/: employees.csv
round_3b_live_coding/deepflow-interview-chatbot/backend/src/app/: config.py  database.py  main.py
round_3b_live_coding/deepflow-interview-chatbot/backend/src/app/analytics/: router.py  schemas.py  service.py
round_3b_live_coding/deepflow-interview-chatbot/backend/src/app/chat/: models.py  repository.py  router.py  service.py
round_3b_live_coding/deepflow-interview-chatbot/backend/src/app/clients/: repository.py  service.py
round_3b_live_coding/deepflow-interview-chatbot/backend/src/app/employees/: router.py  schemas.py  service.py
round_3b_live_coding/deepflow-interview-chatbot/backend/src/app/inngest_app/: client.py  functions.py
round_3b_live_coding/deepflow-interview-chatbot/backend/src/app/middleware/: error_handler.py  timing.py
round_3b_live_coding/deepflow-interview-chatbot/backend/src/app/ml/: agent.py  router.py  service.py
round_3b_live_coding/deepflow-interview-chatbot/backend/src/app/settings/: models.py  router.py  schemas.py  service.py
round_3b_live_coding/deepflow-interview-chatbot/backend/src/app/utils/: tokens.py
round_3b_live_coding/deepflow-interview-chatbot/contracts/python/: pyproject.toml
round_3b_live_coding/deepflow-interview-chatbot/contracts/typescript/: package-lock.json  (+1 more)
round_3b_live_coding/deepflow-interview-chatbot/frontend/: index.html  package-lock.json  package.json
(+29 files in other folders)
