[project]
name = "hr-chatbot-backend"
version = "0.1.0"
description = "FastAPI backend for the Acme Corp HR chatbot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-ai>=0.2.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "inngest>=0.5.0",
    "tiktoken>=0.12.0",
    "chat-contracts",
    "sqlmodel>=0.0.37",
    "alembic>=1.18.4",
]

[tool.uv.sources]
chat-contracts = { path = "../contracts/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "T20",   # flake8-print
]
ignore = [
    "ANN401", # dynamically typed expressions (Any)
    "S101",   # use of assert
    "B008",   # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101", "ANN"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
invalid-assignment = "ignore"       # SQLAlchemy/SQLModel descriptor type mismatches
unresolved-attribute = "ignore"     # SQLModel fields expose SA column ops at runtime (.asc, .is_not, etc.)
possibly-unresolved-reference = "warn"
